Fixed safari z-index #4

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-bottom: 200px;
+  overflow: visible;
 }
 
 * {    
